--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <title>HNH PROFILE SQUARE</title>
+    <title>HNH SQUARE</title>
   </head>
   <body>
     <div id="root"></div>
